fixed stretched images

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,39 +9,36 @@ body {
     }
 }
 
-.blog__post h1,
-.blog__post h2,
-.blog__post h3,
-.blog__post h4,
-.blog__post h5,
-.blog__post h6, {
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";;
-    font-weight: bold;
-    margin: 0.4em 0;
-}
-
-.blog__post h3 {
-    font-size: 1.5em;
-}
-
-.blog__post h4 {
-    font-size: 1.25em;
-}
-
-.blog__post h5 {
-    font-size: 1.1em;
-}
-
-.blog__post p {
-    text-align: justify;
-    margin: 1em 0;
-}
-
-.blog__post a {
-    color: #319795;
-    font-weight: bold;
-}
-
-.blog__post li {
-    margin-left: 1em;
+.blog__post {
+    h1, h2, h3, h4, h5, h6 {
+        font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";;
+        font-weight: bold;
+        margin: 0.4em 0;
+    }
+    h3 {
+        font-size: 1.5em;
+    }
+    h4 {
+        font-size: 1.25em;
+    }
+    h5 {
+        font-size: 1.1em;
+    }
+    h6 {
+        font-size: 1em;
+    }
+    p {
+        text-align: justify;
+        margin: 1em 0;
+    }
+    a {
+        color: #319795;
+        font-weight: bold;
+    }
+    ol, ul {
+        margin: 1em 0;
+    }
+    li {
+        margin-left: 1em;
+    }
 }
